--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>HOME</title>
-  <link rel="stylesheet" href="~src/home.css">
+  <link rel="stylesheet" href="src/home.css">
+  <link rel="stylesheet" href="src/theme.css">
 </head>
 <body>
   <div id="root"></div>
-  <img src="~tux.jpg" alt="">
-  <script src="~src/home.js"></script>
+  <img src="tux.jpg" alt="">
+  <script src="src/home.js"></script>
 </body>
 </html>
