--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>DASHBOARD</title>
-  <link rel="stylesheet" href="~src/styles/dashboard.css">
+  <link rel="stylesheet" href="src/styles/dashboard.css">
 </head>
 <body>
   <div id="root"></div>
-  <script src="~src/dashboard/index.js"></script>
+  <script src="src/dashboard/index.js"></script>
 </body>
 </html>
