--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <img src="tux.jpg" alt="">
+  <img src="~tux.jpg" alt="">
   <script src="src/home.js"></script>
 </body>
 </html>
